Sat Nov 14 08:40:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_mark, vm_memsize): ignore other VM.

	* vm.c (rb_vm_initialize): add last NULL.

Fri Nov 13 19:56:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (vm_join): does nothing when vm has died.

	* vm.c (rb_vm_free): notify to waiting vm.

	* vm.c (vm_create): global_vm_lock is already locked.

Fri Nov 13 16:28:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_native_thread_create): start new thread with
	  rb_thread_t.  split from thread_create_core.

	* vm.c (rb_vm_start, rb_vm_join): new methods, #start and #join.

	* vm.c (vm_make_main_thread): make bare main thread.  split from
	  ruby_make_bare_vm.

Fri Nov 13 10:14:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): not destruct vm, nor re-send signal.

	* eval.c (ruby_cleanup): destruct current vm and re-send signal.

	* parse.y (Init_sym): use separate object space.

Thu Nov 12 16:34:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (thread_recycle_stack, rb_thread_recycle_stack_release):
	  stack belongs to no object space.

Wed Nov 11 18:20:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_objspace_free): finalizer should have been done already.

	* vm.c (rb_vm_free): VM does not belong to any object spaces.

	* vm.c (ruby_make_bare_vm): thread belongs to its VM object space.

Mon Nov  9 20:56:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_stat, do_lstat): fixed typo.

Fri Nov  6 16:15:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_dir_aref, rb_dir_glob): added methods, Dir#[] and
	  Dir#glob.

Thu Dec 25 01:52:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): sets native thread key.

Thu Dec 25 01:48:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (Init_Thread): separated per-process initialization
	  from InitVM_Thread.

	* thread_{pthread,win32}.c (Init_native_thread): ditto.
